# kafka-text-embedding-inference

./: .env  .gitignore  Dockerfile  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
app/: main.py
app/model/: model.py
chunking-app/: Dockerfile  README.md
chunking-app/src/: consumer.py  main.py  producer.py
deployment/: deployment.yaml  redpanda-console-values.yaml  strimzi.yaml  values.yaml
deployment/chunking-app/: deployment.yaml
deployment/inference-app/: deployment.yaml  deployment_GPU.yaml  local.yaml
deployment/local/: docker-compose.yaml  qdrant-kafka-sink.json
deployment/paper-producer/: deployment.yaml
experiments/kafka-python-inference-embedded/: README.md  build_latest.sh
experiments/kafka-python-inference-embedded/deployment/inference-app/: deployment_CPU.yaml
experiments/kafka-python-inference-embedded/inference-app/: README.md
experiments/kafka-python-inference-embedded/paper-producer/: pyproject.toml
experiments/kafka-python-inference-tei/paper-producer/: Dockerfile  README.md
experiments/kafka-streams-inference/: build.gradle.kts
experiments/kafka-streams-inference/deployment/: tei.yaml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
inference-app/: Dockerfile  Dockerfile_GPU  pyproject.toml
inference-app/schemas/: embedded-paper.json  qdrant-sink-message.json
inference-app/src/: asyncembeddingproducer.py  asyncembeddingsinference.py  chunker.py  config.py  consumer.py  embeddingproducer.py  embeddingsinference.py  main.py  model.py  paper.py  producer.py  tei_pb2.py  tei_pb2_grpc.py
inference-app/src/model/: model.py
inference-pipeline/: build.gradle.kts
paper-inference-app/: build.gradle.kts
paper-inference-app/demo/: docker-compose.arm64.yaml  docker-compose.yaml  qdrant-kafka-sink.json
paper-producer/: Dockerfile
paper-producer/schemas/: paper.json
paper-producer/src/: main.py
paper-producer/src/paper/: paper.py
(+78 files in other folders)
