[tool.poetry]
name = "kafka-python-inference"
version = "0.1.0"
description = ""
authors = ["raphala <22345578+raphala@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
confluent-kafka = "^2.6.0"
torch = "^2.5.0"
transformers = "^4.45.2"
sentence-transformers = {extras = ["onnx"], version = "^3.2.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

