[tool.poetry]
name = "inference-app"
version = "0.1.0"
description = ""
authors = ["raphala <22345578+raphala@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.13"
confluent-kafka = "^2.6.0"
requests = "^2.32.3"
jsonschema = "^4.23.0"
torch = "^2.5.0"
sentence-transformers = {extras = ["onnx"], version = "^3.2.1"}
fastembed = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
